--- a/style.css
+++ b/style.css
@@ -1,22 +1,37 @@
 @import "skill.css";
 
 .gradientStyle,
-.btn:hover,
-footer p,
-.flip {
-  background: linear-gradient(90deg, #f81420 -10%, #37114d 105%);
+footer p {
+  background: linear-gradient(90deg, #f81420 -5%, #37114d 102%);
   border: none;
 }
-.wrapper {
-  width: fit-content;
+.btn:hover {
+  background: linear-gradient(90deg, #f81420 -25%, #37114d 100%);
+  border: none;
+  color: rgb(228, 228, 228);
+}
+.btn {
+  min-width: 120px;
+  text-align: center;
+  font-size: 1.2rem;
+  padding: 0.3rem;
+  border-radius: 1.3rem;
+  border: none;
+}
+.resumeBtn {
+  float: right;
+  background-color: #757575;
+  margin-top: 1rem;
+}
+.sendBtn {
+  margin: 2.5rem auto;
 }
 .container {
   margin: 0 auto;
   width: 95%;
   text-align: center;
 }
-@media only screen and(max-width:200px){
-  
+@media only screen and(max-width:200px) {
 }
 @media only screen and (min-width: 1500px) {
   .body {
@@ -26,16 +41,17 @@ footer p,
     min-width: 70%;
   }
   .Navbar {
-    margin: 5rem auto;
+    margin: 4rem auto;
     max-width: 70%;
   }
   .helloWorld {
     margin: 0 auto 5rem auto;
     font-size: 5rem;
   }
-  section#introPart {
+  #introPart {
     min-height: 450px;
     text-align: left;
+    width: fit-content;
   }
   .photo img {
     min-width: 450px;
@@ -71,7 +87,7 @@ footer p,
 }
 .page {
   width: 100%;
-  margin: 1rem 0 10rem 0;
+  margin: 3rem 0 10rem 0;
   text-align: center;
 }
 body {
@@ -79,35 +95,30 @@ body {
   padding: 0;
   background-color: #f2efea;
   color: #1d1d1d;
-  /* color: #f8f8f8; */
   text-align: center;
   font-size: 1.2rem;
   font-family: "Raleway", "Oswald", sans-serif;
 }
 
-/* navigation */
 .wrapper {
   background-image: url("images/5537.jpg");
   background-size: auto;
 }
+/* navigation */
 .Navbar {
   display: flex;
-  padding: 16px;
-  font-family: sans-serif;
+  padding: 0.5rem;
   text-align: left;
-  height: 3rem;
+  font-weight: 100;
 }
 .Navbar__Items {
   display: flex;
   line-height: 2rem;
   text-align: center;
+  padding-top: 1rem;
+  height: 3rem;
 }
-.Navbar__Link {
-  padding-right: 8px;
-}
-.Navbar__Items--right {
-  margin-left: auto;
-}
+
 @media only screen and (max-width: 800px) {
   .Navbar__Items,
   .Navbar {
@@ -132,36 +143,24 @@ body {
   cursor: pointer;
   padding: 2% 5%;
 }
-.Navbar__Link-toggle i {
-  color: #202020;
-}
 .Navbar__Link a {
   text-decoration: none;
-  color: #202020;
+  vertical-align: text-bottom;
+  font-weight: 100;
 }
-.Navbar__Link a:active,
+.Navbar__Link a:visited,
 .Navbar__Link a:hover {
-  border: 1px solid #202020;
+  border: 1px solid #363636;
   background: none;
-  color: #202020;
-  border-radius: 10px;
+  color: #58687a;
+  border-radius: 1rem;
   padding: 7px;
 }
 
-.my_logo {
-  padding: 1%;
-}
-.resumeBtn {
-  float: right;
-  width: 120px;
-  text-align: center;
-  font-size: 1.2rem;
-  padding: 2% 5%;
-}
 /* greetengs */
 .helloWorld p {
   text-align: center;
-  margin: 3% auto;
+  margin: 4% auto 4% auto;
   font-size: 6rem;
   font-weight: 100;
   width: 100%;
@@ -186,7 +185,9 @@ body {
 .myName {
   color: #eeeeee;
 }
+
 .introJob {
+  color: #eeeeee;
   font-size: 1.5rem;
   text-shadow: 0px 1px 1px #202020;
   font-family: "Raleway";
@@ -194,6 +195,8 @@ body {
 .photo {
   margin: auto;
   max-width: 280px;
+  box-shadow: 20px 2px 9px #1e0822;
+  border-radius: 50%;
 }
 
 /* quote */
@@ -231,10 +234,10 @@ td {
   width: 90%;
   text-align: left;
   margin-top: 3rem;
-  font-family:sans-serif;
+  font-family: sans-serif;
 }
 .about p {
-  width: 100%;
+  width: 90%;
   text-align: justify;
   margin-top: 3rem;
   padding: 0 1rem 0 0;
@@ -242,28 +245,25 @@ td {
 
 /* Page third -skill part */
 .skillPart img {
-  max-width: 70%;
+  max-width: 80%;
 }
 
 /* Page four -contact part */
-#contact{
+#contact {
   background: linear-gradient(#363636 -10%, #111111 110%);
   color: #eeeeee;
 }
-.contact-form {
-  max-height: 600px;
+.contactForm {
+  max-height: 900px;
+  color: #f2efea;
   width: 80%;
   margin: 3rem auto;
 }
 .contactForm h3 {
-  margin: 50px auto;
+  margin: 3rem auto;
+  font-weight: 800;
 }
-.sendBtn {
-  min-width: 100px;
-  font-size: 1.2rem;
-  padding: 0.5rem;
-  margin: 1rem auto;
-}
+
 .contactInfo {
   margin: 3rem auto;
   text-align: center;
@@ -274,34 +274,33 @@ td {
 .contactInfo h4 {
   font-weight: 800;
 }
-.socIcon img{
-  margin-top: 100px;
+.socIcon img {
+  margin-top: 4rem;
   padding: 10px;
   max-width: 15%;
 }
 
 input[type="tel"],
 input[type="email"],
-input[type="text"] {
+input[type="text"],
+select {
   background-color: #252525;
   border: none;
   border-radius: 0;
   border-bottom: 1px solid #fff;
-  margin: 50px auto;
+  margin: 1rem auto;
   width: 80%;
 }
-
+input[type="tel"]:focus,
+input[type="email"]:focus,
+input[type="text"]:focus {
+  border: none;
+  background-color: #424242;
+}
 /* footer part */
 footer p {
   margin: 10px 0 10px 20px;
-}
-footer p,
-.flip {
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
-}
-.flip {
-  display: inline-block;
-  transform: rotateY(180deg);
 }
