--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ footer p {
 footer p {
   font-weight: 500;
   float: left;
-  margin: 0.5rem 0 0.5rem 1.5rem;
+  margin: 1rem 1.5rem;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
