--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ a:link {
 /* Hello World part */
 .helloWorld p {
   font-family: "Oswald";
+  max-width: 90%;
   margin: 5% auto;
   font-size: 6rem;
   font-weight: 700;
