--- a/style.css
+++ b/style.css
@@ -154,8 +154,8 @@ a:link {
 /* Hello World part */
 .helloWorld p {
   font-family: "Oswald";
-  max-width: 90%;
-  margin: 5% auto;
+  max-width: 85%;
+  margin: 5% 0;
   font-size: 6rem;
   font-weight: 700;
   text-shadow: 0px 1.2px 1.2px #202020;
