--- a/style.css
+++ b/style.css
@@ -239,7 +239,7 @@ td {
   text-align: center;
 }
 .skillPart img {
-  max-width: 95%;
+  max-width: 600px;
 }
 
 /* Page four -contact part and contact_form*/
