--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ td {
   text-align: center;
 }
 #my_skills img {
-  max-width: 400px;
+  max-width: 60%;
 }
 
 /* Page four -contact part and contact_form*/
