--- a/style.css
+++ b/style.css
@@ -289,6 +289,7 @@ input[type="text"]:focus {
   }
   #my_skills img {
     margin-top: 30%;
+    padding: 1.5rem;
     max-width: 400px;
   }
   .introName {
