--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ footer p {
 }
 footer p {
   font-weight: 500;
+  text-align: center;
   margin: 1rem 1.5rem;
   -webkit-background-clip: text;
   background-clip: text;
